# PLGames-Booster-Up

./: .env.example  .gitignore  README.md
.github/workflows/: api-ci.yml  client-ci.yml  client-release.yml  relay-ci.yml  web-ci.yml
api/: alembic.ini  requirements.txt
api/alembic/: env.py
api/app/: config.py  database.py  main.py  seed_games.py
api/tests/: conftest.py  test_admin.py  test_auth.py  test_games.py  test_health.py  test_me.py  test_multipath.py  test_sessions.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/resources/windivert/: README.md
client/src-tauri/src/: api_client.rs  auth.rs  commands.rs  config.rs  filter_builder.rs  game_detector.rs  lib.rs  main.rs  packet_builder.rs  protocol.rs  smart_monitor.rs  tray.rs  udp_proxy.rs  windivert.rs
docs/: 01-competitive-analysis.md  02-enhanced-specification.md  03-roadmap.md  phase4-windows-client.md
gateway-agent/: agent.py  config.yaml
gateway-agent/systemd/: gateway-agent.service  plg-relay.service
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
infra/scripts/: backup.sh  setup-central.sh  setup-gateway.sh  (+1 more)
relay/: Cargo.toml  Dockerfile  plg-relay.service
relay/src/: api.rs  config.rs  forwarder.rs  main.rs  metrics.rs  protocol.rs  session.rs
relay/tests/: e2e_test.py  run_e2e.sh
scripts/: bump-version.sh
web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+94 files in other folders)
