[package]
name = "plg-relay"
version = "0.1.0"
edition = "2021"
description = "PLGames Booster UP - PLG Relay Server"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
socket2 = { version = "0.5", features = ["all"] }
config = "0.14"
