[package]
name = "plgames-client"
version = "0.1.0"
edition = "2021"
description = "PLGames Booster — Windows game network booster"

[lib]
name = "plgames_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33"
directories = "5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
